# HttpServer

./: CMakeLists.txt  create_project.sh  main.cpp
app/include/: AppServer.h
app/include/handlers/: BusinessHandler.h  LoginHandler.h  MenuHandler.h  RegisterHandler.h
app/src/: AppServer.cpp
app/src/handlers/: BusinessHandler.cpp  LoginHandler.cpp  MenuHandler.cpp  RegisterHandler.cpp
include/http/: HttpContext.h  HttpRequest.h  HttpResponse.h  HttpServer.h
include/middleware/: Middleware.h  MiddlewareChain.h
include/middleware/cors/: CorsConfig.h  CorsMiddleware.h
include/router/: Router.h  RouterHandler.h
include/session/: Session.h  SessionManager.h  SessionStorage.h
include/ssl/: SslConfig.h  SslContext.h  SslTypes.h
include/utils/: FileUtil.h  MysqlUtil.h
include/utils/db/: DbConnection.h  DbConnectionPool.h
resource/: index.html  menu.html
src/http/: HttpContext.cpp  HttpRequest.cpp  HttpResponse.cpp  HttpServer.cpp
src/middleware/: MiddlewareChain.cpp
src/middleware/cors/: CorsMiddleware.cpp
src/router/: Router.cpp
src/session/: Session.cpp  SessionManager.cpp  SessionStorage.cpp
src/ssl/: SslContext.cpp
src/utils/db/: DbConnection.cpp  DbConnectionPool.cpp
